--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-stock-analyzer
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --timeout 300
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --worker-class gevent --workers 4 --timeout 300
     envVars:
       - key: GEMINI_API_KEY
         sync: false
